fix positiong of table label and widen run stitching button on mobile
Former-commit-id: dab4358e0f4dc968bdb8e9e4f9be6aa9cc37c134

--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -858,6 +858,7 @@ there.
 
   .button_submit {
     margin: 0 auto;
+    width: 89.5%;
   }
 
   .mobile_buttons {
@@ -911,6 +912,17 @@ there.
     display: inherit;
     margin-left: 0;
     margin-bottom: 7px;
+  }
+
+  #react-entry-point>div>div.four.columns.instruction>label {
+    margin: 0 auto;
+    
+  }
+
+  #_dash-app-content>div>div.four.columns.instruction>label {
+    margin: 0 auto;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
   }
 
 
